fix margin issue on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -374,7 +374,7 @@ footer p{
         font-size: 5vw;
     }
     .author-image {
-        padding: 0 vw;
+        padding: 3vw 27vw;
         margin: 7vw;
     }       
 }
